--- a/.github/workflows/balena.yml
+++ b/.github/workflows/balena.yml
@@ -1,7 +1,7 @@
 name: BalenaCloud Deploy
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 jobs:
   deploy:
     runs-on: ubuntu-latest
