--- a/.github/workflows/balena.yml
+++ b/.github/workflows/balena.yml
@@ -10,12 +10,10 @@ jobs:
       uses: actions/checkout@v2
     - name: Setup NodeJS
       uses: actions/setup-node@v2.4.0
-    - name: Balena Push
-      uses: theaccordance/balena-push@v1.0.0
+    - name: Balena Deploy
+      uses: bekriebel/balena-cli-action@v1
+      if: success()
       with:
-        # API Key to interact with BalenaCloud
-        api-token: ${{ secrets.BALENA_API_TOKEN }} 
-        # name of the BalenaCloud application
-        application-name: ${{ secrets.BALENA_APP_NAME }}
-        # Optional. Provide a subfolder path, example: ./balena-wpe
-        application-path: .
+        balena_api_token: ${{secrets.BALENA_API_TOKEN}}
+        balena_command: "balena deploy ${{ secrets.BALENA_APP_NAME }}"
+
