--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
   statuscake:
     build: .
     environment:
-      URL: 'https://push.statuscake.com/?PK=f2ce1bae94e0357&TestID=6075093&time=0'
-      PERIOD: "90s"
+      URL: 'https://push.statuscake.com/?PK=dac2c707fc25b74&TestID=6076325&time=0'
+      PERIOD: "2m"
