--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: ping-monitoring
   nginx:
     build: nginx
-    expose:
-      - "8080"
-      - "8443"
+    ports:
+      - "8080:8080"
+#      - "80:8080"
+      - "8443:8443"
+#      - "443:8443"
