--- a/nginx/Dockerfile.raspberry-pi
+++ b/nginx/Dockerfile.raspberry-pi
@@ -2,3 +2,5 @@ FROM nginx:1.21.1-alpine
 
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY http.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80 443 8080 8443
