--- a/nginx/http.conf
+++ b/nginx/http.conf
@@ -3,6 +3,7 @@ server {
 
   location / {
     proxy_pass http://192.168.1.1;
+    proxy_set_header Referer http://192.168.1.1/;
     proxy_http_version 1.1;
   }
 }
@@ -12,6 +13,7 @@ server {
 
   location / {
     proxy_pass https://192.168.1.1;
+    proxy_set_header Referer http://192.168.1.1/;
     proxy_http_version 1.1;
   }
 }
