--- a/.github/workflows/balena.yml
+++ b/.github/workflows/balena.yml
@@ -2,6 +2,10 @@ name: BalenaCloud Deploy
 on:
   push:
     branches: [ main ]
+  schedule:
+    - cron: '30 9 1 * *'
+  workflow_dispatch:
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
