--- a/ping-monitoring/Dockerfile.raspberry-pi
+++ b/ping-monitoring/Dockerfile.raspberry-pi
@@ -1,13 +1,13 @@
-FROM balenalib/raspberry-pi-alpine-golang:latest-build AS build
+FROM balenalib/raspberry-pi-alpine-golang:1.18-3.15-build-20221215 AS build
 
-WORKDIR /go/src/github.com/mjasion/balena-monitoring
+WORKDIR /go/src/github.com/mjasion/ping-monitoring
 
-COPY . /go/src/github.com/mjasion/balena-monitoring
+COPY . /go/src/github.com/mjasion/ping-monitoring
 
 RUN go build .
 
 FROM balenalib/raspberry-pi-alpine:3.15
 
-COPY --from=build /go/src/github.com/mjasion/balena-monitoring/balena-monitoring .
+COPY --from=build /go/src/github.com/mjasion/ping-monitoring/ping-monitoring .
 
-CMD ./balena-monitoring
+CMD ./ping-monitoring
