--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,20 @@
 version: "2.1"
 
 services:
-  cloudflare-ddns:
-    build: cloudflare-ddns
-  # tunnel:
-  #   container_name: cloudflared-tunnel
-  #   image: cloudflare/cloudflared
-  #   restart: unless-stopped
-  #   command: tunnel run
-  #   environment:
-  #     - TUNNEL_TOKEN=eyJhIjoiNGJlMzc2Mjk5ZWE2ZjM4MDRkNmI4OWQ2NjFkMmUzMGEiLCJ0IjoiODAxMzIyY2EtZjM3Yy00NTEwLThiMzEtNjUxNjgxM2IzZGJhIiwicyI6Ik1qUTBNekV3TXpJdFpXUmpNeTAwWldZMUxUazNOVGt0TkRBNU9UY3hNRFptTUdSaiJ9
+  hellpot:
+    build: hellpot
+    ports:
+      - "8080:8080"
+      - "8443:8443"
+  tunnel:
+    container_name: cloudflared-tunnel
+    image: cloudflare/cloudflared
+    restart: unless-stopped
+    command: tunnel run
+    environment:
+      - TUNNEL_TOKEN=eyJhIjoiNGJlMzc2Mjk5ZWE2ZjM4MDRkNmI4OWQ2NjFkMmUzMGEiLCJ0IjoiYTQ3ZDUyYjktYzg2ZS00NTM1LThmNTctMmM5M2I5NjZkYTA4IiwicyI6Ik9XWmhNalEzTmpVdE1XRm1OUzAwWkRnMExUa3dOVGN0TmpGa09HRTNNell6WmpBMiJ9
   nginx:
     build: nginx
     ports:
-      - "8080:8080"
-#      - "80:8080"
-      - "8443:8443"
-#      - "443:8443"
+      - "80:8080"
+      - "443:8443"
