--- a/nginx/Dockerfile.raspberry-pi
+++ b/nginx/Dockerfile.raspberry-pi
@@ -1,6 +1,8 @@
 FROM nginx:1.28.0-alpine
 
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY http.conf /etc/nginx/conf.d/default.conf
+COPY default.conf /etc/nginx/default.conf
+COPY web* /etc/nginx/conf.d/
+
+RUN rm /etc/nginx/conf.d/default.conf
 
 EXPOSE 80 443 8080 8443
