Change endpoint for hellpot

--- a/nginx/web_host.conf
+++ b/nginx/web_host.conf
@@ -9,7 +9,7 @@ server {
     location '/' {
     	proxy_set_header Host $host;
     	proxy_set_header X-Real-IP $remote_addr;
-    	proxy_pass http://hellpot:8080$request_uri;
+    	proxy_pass http://raspberrypi:8080$request_uri;
     }
 
 }
