--- a/nginx/web_host.conf
+++ b/nginx/web_host.conf
@@ -10,6 +10,8 @@ server {
     	proxy_set_header Host $host;
     	proxy_set_header X-Real-IP $remote_addr;
     	proxy_pass http://192.168.211.12:8080$request_uri;
+    	limit_rate 100k;
+    	limit_rate_after 2m;
     }
 
 }
