new cert.pl code + ratelimitting

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,6 +26,6 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
-
+    limit_req_zone $binary_remote_addr zone=one:10m rate=2r/m;
     include /etc/nginx/conf.d/*.conf;
 }
