--- a/nginx/web_host.conf
+++ b/nginx/web_host.conf
@@ -6,4 +6,16 @@ server {
         return 200 "mojecertpl-site-verification-jPL5dFdOST3jTlos3Vi1hH4SSpyjdRjv";
     }
 
+    location '/' {
+#     	proxy_set_header Host $host;
+#     	proxy_set_header X-Real-IP $remote_addr;
+#     	proxy_pass http://192.168.211.12:8080$request_uri;
+    	limit_rate 1k;
+    	limit_rate_after 5m;
+
+         # Limit requests to 4 per minute
+         limit_req zone=one burst=2 nodelay;
+         limit_req_status 429;
+    }
+
 }
