--- a/.github/workflows/balena.yml
+++ b/.github/workflows/balena.yml
@@ -6,6 +6,10 @@ on:
     - cron: '30 9 1 * *'
   workflow_dispatch:
 
+concurrency:
+  group: balena-deploy
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
