Refactor configuration parameters for BLE temperature monitoring

--- a/thermostats/example.env
+++ b/thermostats/example.env
@@ -1,19 +1,31 @@
-# BLE Temperature Monitoring - Environment Variables
-# These environment variables override values in config.yaml
+# BLE Temperature Monitoring Environment Variables
+# Copy this file to .env and fill in your values
 
 # BLE scanning configuration
 SCAN_INTERVAL_SECONDS=60
 SENSORS=A4:C1:38:00:00:01,A4:C1:38:00:00:02,A4:C1:38:00:00:03,A4:C1:38:00:00:04
 
-# Prometheus metrics push configuration
+# Prometheus push configuration
 PUSH_INTERVAL_SECONDS=15
+
+# Grafana Cloud Prometheus settings
+# Get these from: https://grafana.com/orgs/YOUR_ORG/access-policies
 PROMETHEUS_URL=https://prometheus-prod-01-eu-west-0.grafana.net/api/prom/push
 PROMETHEUS_USERNAME=123456
-PROMETHEUS_PASSWORD=your-grafana-cloud-api-key-here
+PROMETHEUS_PASSWORD=glc_eyJrIjoixxxxxxxxxxxxxx...
+
+# Metric name
 METRIC_NAME=ble_temperature_celsius
+
+# Start at even second for predictable timing
 START_AT_EVEN_SECOND=true
-BUFFER_SIZE=1000
+
+# Ring buffer capacity (number of readings to buffer before push)
+BUFFER_CAPACITY=1000
+
+# Health check port
+HEALTH_CHECK_PORT=8080
 
 # Logging configuration
-LOG_FORMAT=console
-LOG_LEVEL=info
+LOG_FORMAT=json      # json or console
+LOG_LEVEL=info       # debug, info, warn, error
