Enhance logging configuration to support 'logfmt' format and update related validations

--- a/thermostats/example.env
+++ b/thermostats/example.env
@@ -23,5 +23,5 @@ BUFFER_SIZE=1000
 HEALTH_CHECK_PORT=8080
 
 # Logging configuration
-LOG_FORMAT=json      # json or console
+LOG_FORMAT=console   # json, console, or logfmt (use logfmt for Loki)
 LOG_LEVEL=info       # debug, info, warn, error
