Add custom error pages and security files for improved user experience and security

--- a/nginx/web_host.conf
+++ b/nginx/web_host.conf
@@ -2,6 +2,45 @@ server {
     listen 80;
     server_name _ default_server;
 
+    # Root directory for static files
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Custom error pages
+    error_page 403 /403.html;
+    error_page 404 /404.html;
+    error_page 405 /405.html;
+    error_page 429 /429.html;
+    error_page 500 /500.html;
+    error_page 502 /502.html;
+    error_page 503 /503.html;
+    error_page 504 /504.html;
+
+    # Ensure error pages are served correctly
+    location ~ ^/(403|404|405|429|500|502|503|504)\.html$ {
+        internal;
+    }
+
+    # Security Headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    # Disable access to hidden files
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Disable access to backup files
+    location ~ ~$ {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
     location '/.well-known/mojecertpl/verification' {
         # pragma: allowlist secret - public domain verification token
         return 200 "mojecertpl-site-verification-jPL5dFdOST3jTlos3Vi1hH4SSpyjdRjv";
@@ -11,12 +50,18 @@ server {
 #     	proxy_set_header Host $host;
 #     	proxy_set_header X-Real-IP $remote_addr;
 #     	proxy_pass http://192.168.211.12:8080$request_uri;
-    	limit_rate 1k;
-    	limit_rate_after 5m;
 
-         # Limit requests to 4 per minute
+         # Only allow GET and HEAD methods, return 405 for others
+         if ($request_method !~ ^(GET|HEAD)$ ) {
+             return 405;
+         }
+
+         # Rate limiting: 2 per minute with burst of 2
          limit_req zone=one burst=2 nodelay;
          limit_req_status 429;
+
+         # Try to serve static files first, then index
+         try_files $uri $uri/ /index.html;
     }
 
 }
