--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,6 +2,7 @@ FROM nginx:1.29.3-alpine
 
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY web* /etc/nginx/conf.d/
+COPY html/ /usr/share/nginx/html/
 
 RUN rm /etc/nginx/conf.d/default.conf
 
