--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 user  nginx;
 worker_processes  1;
 
-error_log  /var/log/nginx/error.log notice;
+error_log  /dev/stderr notice;
 pid        /var/run/nginx.pid;
 
 
@@ -14,18 +14,52 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    # Hide nginx version number in error pages and headers
+    server_tokens off;
+
+    # Standard Apache-style log format
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    # Logfmt format for Loki/structured logging
+    log_format logfmt 'ts=$time_iso8601 '
+                      'remote_addr=$remote_addr '
+                      'remote_user=$remote_user '
+                      'request="$request" '
+                      'request_method=$request_method '
+                      'request_uri=$request_uri '
+                      'status=$status '
+                      'body_bytes_sent=$body_bytes_sent '
+                      'http_referer="$http_referer" '
+                      'http_user_agent="$http_user_agent" '
+                      'http_x_forwarded_for="$http_x_forwarded_for" '
+                      'request_time=$request_time '
+                      'upstream_response_time=$upstream_response_time '
+                      'host=$host';
+
+    access_log  /dev/stdout  logfmt;
 
     sendfile        on;
     #tcp_nopush     on;
 
     keepalive_timeout  65;
 
-    #gzip  on;
+    # Enable gzip compression
+    gzip  on;
+    gzip_vary on;
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
+    gzip_disable "msie6";
+
+    # Rate limiting configuration - 2 requests per minute per IP
     limit_req_zone $binary_remote_addr zone=one:10m rate=2r/m;
+
+    # Security: Limit request body size to prevent large uploads
+    client_max_body_size 1m;
+
+    # Security: Timeouts to prevent slowloris attacks
+    client_body_timeout 10s;
+    client_header_timeout 10s;
+
     include /etc/nginx/conf.d/*.conf;
 }
